[gd_scene load_steps=8 format=3 uid="uid://d1cvxytylxajs"]

[ext_resource type="Texture2D" uid="uid://dmxj84rvqsyqo" path="res://Systems/Engines/Assets/Engine Cell.png" id="1_5hapf"]
[ext_resource type="Script" path="res://Systems/Engines/Cell/cell.gd" id="1_ly8ur"]
[ext_resource type="Texture2D" uid="uid://205aaekh6lm1" path="res://Systems/Engines/Assets/Engine Cell Outline.png" id="3_0t4ec"]
[ext_resource type="Texture2D" uid="uid://cfwuu5avini0b" path="res://Systems/Engines/Assets/Engine Cell Break.png" id="3_t8uae"]

[sub_resource type="Gradient" id="Gradient_dtpwg"]
colors = PackedColorArray(0.53125, 0.53125, 0.53125, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eenfp"]
gradient = SubResource("Gradient_dtpwg")
width = 4
height = 18
fill_from = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a431s"]
size = Vector2(12, 28)

[node name="Cell" type="Node2D"]
script = ExtResource("1_ly8ur")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_5hapf")

[node name="Progress" type="TextureProgressBar" parent="."]
offset_left = -2.0
offset_top = -9.0
offset_right = 2.0
offset_bottom = 9.0
max_value = 18.0
value = 18.0
rounded = true
fill_mode = 3
texture_progress = SubResource("GradientTexture2D_eenfp")

[node name="Break" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_t8uae")

[node name="Outline" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_0t4ec")

[node name="Area" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area"]
shape = SubResource("RectangleShape2D_a431s")

[connection signal="input_event" from="Area" to="." method="_on_area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
